# routes/calendars.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const calendarController = require('../controllers/calendars');
 
-router.get('/', calendarController.getCalendar);
+router.get('/', calendarController.getCalendars);
+router.get('/:id', calendarController.getOne);
 
 module.exports = router;
